# gpy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: README.md  bench_active_learning.py  bench_gaussian_process.py  bench_kernels.py  benchmark_gpy.py
examples/: active_learning_example.py  anisotropic_kernel_example.py  basic_active_learning_example.py  basic_kernel_example.py  composite_kernels.py  kernel_comparison_example.py  save_load_example.py
src/gpy/: __init__.py
src/gpy/ActiveLearning/: README.md  __init__.py  active_learning.py  selection_functions.py
src/gpy/GaussianProcess/: README.md  __init__.py  gaussian_process.py
src/gpy/Kernels/: README.md  __init__.py  _base.py  _composite.py  constant.py  matern.py  periodic.py  rbf.py
src/gpy/Optimization/: README.md
src/gpy/Optimization/active_learning/: loss_functions.py  optimization.py
src/gpy/Optimization/gaussian_process/: loss_functions.py  optimization.py
src/gpy/_utils/: _computation.py  _computation_utils.py  _condition_utils.py  _constants.py  _data.py  _errors.py  _preprocess.py  _types.py  _validation.py  _validation_utils.py
src/gpy/core/: __init__.py  _base.py  _types.py  active_learning.py  gaussian_process.py  string_gen.py
src/gpy/kernels/: README.md  __init__.py  _base.py  _composite.py  composite.py  constant.py  periodic.py  rbf.py
