[project]
name = "gpy"
version = "0.1.0"
description = "Gaussian Process Regression Implementation with active learning"
authors = [{name = "Stephen O'Connor"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpy"]
