[project]
name = "gpy"
version = "2.1.2"
description = "Lightweight Gaussian Process regression library"
license = { file = "LICENSE" }
authors = [{ name = "Stephen O'Connor", email = "soconnor10111@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["gaussian-process", "machine-learning", "regression", "active-learning", "bayesian"]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.urls]
Repository = "https://github.com/soconnor16/gpy"

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpy"]
